--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Adison Justis</h1>
-						<p>Model</p><br> 
-						<p>Subscribe to my YouTube channel</p>
+						<p>Model. Subscribe to my YouTube channel</p>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/adisonjustis/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCEtPAtUpP2TwB7g2VSVyOOA" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
 						</ul>
 					</header>
 
