--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Adison Justis</h1>
-						<p>Model. Subscribe to my YouTube channel</p>
+						<p>Model</p>
+						<p>Subscribe to my YouTube channel</p>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/adisonjustis/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.youtube.com/channel/UCEtPAtUpP2TwB7g2VSVyOOA" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
