--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/adisonjustis/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.youtube.com/channel/UCEtPAtUpP2TwB7g2VSVyOOA" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
+							<li><a href="https://www.snapchat.com/add/lovee_adii" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 						</ul>
 					</header>
 
